--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		</figure>
 		<h2>Llistat d'alumnat Fila 1</h2>
 		<ul>
+			<li><a href="include/RubenSantacatalinaPellicer.html">Ruben Santacatalina Pellicer</a></li>
 			<!-- Cada alumne ha de crear un enllaç a una pàgina personal, en la carpeta include -->
 			<!-- Per exemple: <li><a href="enllaç pàgina personal">Nom de l'alumne</a></li> -->
 			
