--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 				i ha de crear també una carpeta on ficar 2 pàgines web -->
 			<li><a href="./include/antuan/paginaAntuan.html">Antuan</a></li>
 			<li><a href="./include/ruben/RubenSantacatalinaPellicer.html">Ruben</a></li>
+			<li><a href="./include/lidia/LidiaMaria.html">Lidia</a></li>
+
 
 
 		</ul>
