--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				i ha de crear també una carpeta on ficar 2 pàgines web -->
 			<li><a href="./include/antuan/paginaAntuan.html">Antuan</a></li>
 			<li><a href="./include/ruben/RubenSantacatalinaPellicer.html">Ruben</a></li>
-
+            <li><a href="./include/lidia/lidiamaria.html">Lidia</a></li>
 
 		</ul>
 	</nav>	
@@ -33,7 +33,8 @@
 			<!-- Per exemple: <li><a href="enllaç pàgina personal">Nom de l'alumne</a></li> -->
 			<p>Antuan Juseth Guillen Sarmiento</p>
 			<p>Ruben Santacatalina Pellicer</p>
-			
+			<p>Lidia María Espinar Tolstova</p>
+
 		</ul>
 
 	</main>
