Modifica index.html i crea pàgina personal amb imatge

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<li><a href="./include/antuan/paginaAntuan.html">Antuan</a></li>
 			<li><a href="./include/ruben/RubenSantacatalinaPellicer.html">Ruben</a></li>
             <li><a href="./include/lidia/lidiamaria.html">Lidia</a></li>
+			<li><a href="./include/alejandro/alejandro.html">Alejandro</a></li>
 
 		</ul>
 	</nav>	
