Modifica index.html i crea pàgina personal amb imatge

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<li><a href="./include/ruben/RubenSantacatalinaPellicer.html">Ruben</a></li>
             <li><a href="./include/lidia/lidiamaria.html">Lidia</a></li>
 			<li><a href="./include/alejandro/alejandro.html">Alejandro</a></li>
+			<li><a href="./include/richart/richart.html">Richart</a></li>
 
 		</ul>
 	</nav>	
@@ -35,6 +36,7 @@
 			<p>Antuan Juseth Guillen Sarmiento</p>
 			<p>Ruben Santacatalina Pellicer</p>
 			<p>Lidia María Espinar Tolstova</p>
+			<p>Richart Rubio Borrás</p>
 
 		</ul>
 
